remove scrollbar by default in modal, fix #265

--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -34,7 +34,7 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   // Hack to avoid moving a submit button out of its form parent
   .modal-footer {
